# tenant-legal-tools

./: .dockerignore  .env.example  .gitignore  CASE_LAW_INGESTION_SPEC.md  CLAUDE.md  CLEANUP_SUMMARY.md  Dockerfile  ENHANCED_CASE_ANALYZER_IMPLEMENTATION.md  GRAPH_FIRST_IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INGESTION_GUIDE.md  LEGAL_REASONING_EVALUATION.md  Makefile  README.md  ROADMAP.md  TEST_GUIDE.md  VISUALIZATION_ENHANCEMENTS.md  debug_loading.html  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  pytest.ini  test_case_analysis.html  test_case_law_ingestion.py  test_justia_scraper.py  test_loading.html  test_loading_simple.html  test_relationships_local.sh  test_visualization.py
.cursor/rules/: specify-rules.mdc
.github/workflows/: ci.yml  deploy.yml  ingest-manifests.yml
.specify/memory/: constitution.md
data/: analysis_cache.sqlite  case_eval_results.json  case_ground_truth.json  ingestion_checkpoint_consolidated.json  ingestion_report_consolidated.json  knowledge_graph.graphml  nyc_problem_landlords.txt  retrieval_test_results.json  test_seed_urls.txt
data/extraction_tests/: 172969_case_current.json  172969_case_typed_v1.json  172969_case_typed_v2.json  2025-ny-slip-op-25196_case_current.json  2025-ny-slip-op-25196_case_typed_v1.json  2025-ny-slip-op-33306-u_case_typed_v1.json  235-b_statute_current.json  235-b_statute_typed_v1.json  235-b_statute_typed_v2.json  235-b_statute_typed_v3.json  235-b_statute_typed_v4.json  getting-repairs_guide_current.json  getting-repairs_guide_typed_v1.json  getting-repairs_guide_typed_v2.json  getting-repairs_guide_typed_v3.json
data/manifests/: README.md  chtu_cases.jsonl  deregulation_cases.jsonl  deregulation_statutes.jsonl  habitability_cases.jsonl  habitability_statutes.jsonl  harassment_cases.jsonl  harassment_destabilization_statutes.jsonl  harassment_statutes.jsonl  justia_100_cases.jsonl  sources.jsonl  sources.jsonl.backup  sources_stats.json
docs/: API_REQUEST_FLOW.md  ARCHITECTURE.md  DATA_INGESTION.md  DEBUG_DATABASE_EMPTY.md  DEPENDENCY_GRAPH.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCKER_OPTIMIZATION.md  ENTITY_LOOKUP_REFACTOR.md  ENTITY_MANAGEMENT.md  FIXES_APPLIED.md  FIX_WARNING_MESSAGE.md  GETTING_STARTED.md  IMPLEMENTATION_RECOMMENDATIONS.md  INGESTION_FLOW.md  INGEST_LOCALLY.md  JUSTIA_403_FIX.md  JUSTIA_SCRAPER_README.md  JUSTIA_SCRAPING_GUIDE.md  MAKEFILE_COMMANDS.md  PII_ANONYMIZATION_IMPLEMENTATION.md  PROJECT_ORGANIZATION.md  README.md  RETRIEVAL_EXPERIMENTS.md  SECURITY.md  SECURITY_IMPLEMENTATION.md  TEST_RELATIONSHIPS.md  TROUBLESHOOTING.md  US_DEPLOYMENT_CHECKLIST.md  stats_before_consolidation.txt
docs/archive/: AUTOMATED_SEARCH_GUIDE.md  CHAT_FUNCTIONALITY.md  DATA_PRIVACY_ASSESSMENT.md  DEBUG_HETZNER_LOGS.md  ENTITY_MERGING_STRATEGY.md  ENTITY_RESOLUTION_IMPLEMENTATION.md  ENTITY_RESOLUTION_TESTING.md  EVALUATION_SUMMARY.md  GITHUB_SECRETS_SETUP.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_INGESTION_SUMMARY.md  QUICKSTART.md  SEARCH_TERMS_CHTU.md  SECURITY_ASSESSMENT.md
scripts/: ingest_claims.py  ingest_claims_simple.py  retrieval_test.py
snippets/: reingest_all.sh
specs/001-legal-claim-extraction/: quickstart.md
specs/002-canonical-legal-library/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/003-production-readiness/: data-model.md  quickstart.md  research.md  spec.md
specs/004-self-host-deployment/: HETZNER_DEPLOYMENT.md  README.md  spec.md
tenant_legal_guidance/: __init__.py  config.py  constants.py  main.py  prompts.py  prompts_case_analysis.py
tenant_legal_guidance/api/: app.py  context_routes.py  curation_routes.py  routes.py  schemas.py
tenant_legal_guidance/domain/: errors.py
tenant_legal_guidance/eval/: __init__.py  datasets.py  evaluator.py  framework.py  metric_types.py  metrics.py  report.py  report_generator.py  run_evaluation.py
tenant_legal_guidance/graph/: arango_graph.py  migrate_types.py  seed.py
tenant_legal_guidance/models/: claim_types.py  documents.py  entities.py  metadata_schemas.py  relationships.py
tenant_legal_guidance/observability/: middleware.py  rate_limiter.py
tenant_legal_guidance/scripts/: backfill_case_outcomes.py  build_case_ground_truth.py  build_manifest.py  cleanup_duplicate_quotes.py  cleanup_old_attributes.py  eval_case_outcomes.py  evaluate_system.py  filter_manifest.py  graph_audit.py  ingest.py  ingest_100_justia_cases.py  ingest_all_manifests.py  ingest_chtu_resources.py  ingest_runner.py  kg_maintain.py  migrate_entities.py  migrate_to_normalized_graph.py  reingest_all.py  reset_database.py  retrieve.py  run_evaluation.py  scrape_chtu_resources.py  test_extraction.py  test_ingestion_fixes.py  test_justia_search_service.py  validate_manifest.py
tenant_legal_guidance/services/: anonymization.py  cache.py  case_analyzer.py  case_law_retriever.py  case_metadata_extractor.py  case_relevance_filter.py  chtu_scraper.py  claim_extractor.py  claim_matcher.py  concept_grouping.py  context_expander.py  curation_storage.py  deepseek.py  document_processor.py  embeddings.py  entity_consolidation.py  entity_resolver.py  entity_service.py  justia_scraper.py  justia_search.py  legal_element_extractor.py  legal_search.py  outcome_predictor.py  precedent_service.py  proof_chain.py  quote_extractor.py  resource_processor.py  retrieval.py  security.py  tenant_system.py  vector_store.py
tenant_legal_guidance/static/: example_cases.json
tenant_legal_guidance/templates/: case_analysis.html  case_analysis.html.backup  concept_groups.html  context_builder.html  curation.html  index.html  kg_input.html  kg_view.html  privacy.html  qdrant_view.html  sources.html  terms.html
tenant_legal_guidance/tests/: conftest.py  test_chunking.py
tenant_legal_guidance/utils/: analysis_cache.py  chunking.py  entity_helpers.py  errors.py  health_check.py  logging.py  retry.py  text.py
tests/: conftest.py  test_chunking.py  test_concept_grouping.py  test_justia_scraper.py
tests/api/: test_openapi_and_health.py  test_pagination_and_index.py  (+1 more)
(+101 files in other folders)
